# mkrp

./: .gitignore  Cargo.toml  LICENSE  flake.nix  result.json  rust-toolchain.toml
.github/workflows/: check.yml  release-latest.yml
egui-test/: Cargo.toml
egui-test/src/: main.rs
src/: cli.rs  event.rs  interactive.rs  keys.rs  main.rs  mouse.rs  play.rs  record.rs  session.rs  str_ext.rs
src/cmd/: mod.rs  play.rs  record.rs
