[package]
name = "mkrp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.72"
clap = { version = "4.3.17", features = ["cargo", "derive"] }
crossbeam-channel = "0.5.8"
eyre = "0.6.8"
phf = { version = "0.11.2", features = ["macros"] }
rdev = { version = "0.5.3", default-features = false }
spin_sleep = "1.1.1"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
