[package]
name = "mkrp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.17", features = ["cargo", "derive"] }
crossbeam-channel = "0.5.8"
ctrlc = "3.4.4"
eyre = "0.6.8"
indicatif = "0.17.5"
phf = { version = "0.11.2", features = ["macros"] }
rdev = { version = "0.5.3", default-features = false }
spin_sleep = "1.1.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync"] }
